Creaye small mobile version

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 		<h2 id="why">
 			Только высококачественные материалы
 		</h2>
-		<div class="col-md-10 offset-md-1">
-			<span id="anim_im_1" class="col-md-3 whyimg animated" style="margin-left:4.15%;display:none"><img src="img/first_1_1.jpg" alt=""></span>
-			<span id="anim_im_2" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_2.jpg" alt=""></span>
-			<span id="anim_im_3" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_3.jpg" alt=""></span>
+		<div class="col-10 offset-1">
+			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated" style="display:none"><img src="img/first_1_1.jpg" alt=""></span>
+			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_2.jpg" alt=""></span>
+			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_3.jpg" alt=""></span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2" style="display:none">
 			Наращивание ресничек - это не только красиво и привлекательно, но еще и огромный риск для девушки проснуться после процедуры с признаками аллергии на дешевые материалы.
 			<br>
-			Я, в свою очередь, использую только доргие и качественные материалы для наращивания ресниц, так как целиком и полностью чувствую ответственность за своих клиентов, их здоровье и общее впечатление от встречь со мной.
+			Я же, в свою очередь, использую только доргие и качественные материалы для наращивания ресниц, так как целиком и полностью чувствую ответственность за своих клиентов, их здоровье и общее впечатление от встречь со мной.
 		</p>
 	</section>
 	<section id="parallax">
@@ -49,7 +49,7 @@
 			<h3 class="col-md-8 offset-md-1 align-self-center">- Хотите производить впечатление?<br>- Доверьте это дело мне!</h3>
 		</div>
 	</section>
-	<section id="second">
+	<!--<section id="second">
 		<h2 id="by">
 			Краткий список предоставляемых услуг
 		</h2>
@@ -58,7 +58,7 @@
 			<span id="anim_im_5" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_2.jpg" alt=""></span>
 			<span id="anim_im_6" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_3.jpg" alt=""></span>
 		</div>
-	</section>
+	</section>-->
 
 
 
