--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		<h2 id="why">
 			Только высококачественные материалы
 		</h2>
-		<div class="col-10 offset-1">
-			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated" style="display:none"><img src="img/first_1_1.jpg" alt=""></span>
-			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_2.jpg" alt=""></span>
-			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_3.jpg" alt=""></span>
+		<div class="col-10 offset-1 row justify-content-center">
+			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated" style="display:non"><img src="img/first_1_1.jpg" alt=""></span>
+			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:non"><img src="img/first_1_2.jpg" alt=""></span>
+			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="display:non"><img src="img/first_1_3.jpg" alt=""></span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2" style="display:none">
 			Наращивание ресничек - это не только красиво и привлекательно, но еще и огромный риск для девушки проснуться после процедуры с признаками аллергии на дешевые материалы.
@@ -44,21 +44,44 @@
 			Я же, в свою очередь, использую только доргие и качественные материалы для наращивания ресниц, так как целиком и полностью чувствую ответственность за своих клиентов, их здоровье и общее впечатление от встречь со мной.
 		</p>
 	</section>
-	<section id="parallax">
+	<section id="parallax">		
+		<div class="pattern"></div>
 		<div class="row">
 			<h3 class="col-md-8 offset-md-1 align-self-center">- Хотите производить впечатление?<br>- Доверьте это дело мне!</h3>
 		</div>
 	</section>
-	<!--<section id="second">
-		<h2 id="by">
-			Краткий список предоставляемых услуг
+	<section id="second">
+		<h2 id="why">
+			Краткий список услуг
 		</h2>
-		<div class="col-md-10 offset-md-1">
-			<span id="anim_im_4" class="col-md-3 whyimg animated" style="margin-left:4.15%;display:none"><img src="img/first_1_1.jpg" alt=""></span>
-			<span id="anim_im_5" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_2.jpg" alt=""></span>
-			<span id="anim_im_6" class="col-md-3 offset-md-1 whyimg animated" style="display:none"><img src="img/first_1_3.jpg" alt=""></span>
+		<div class="col-10 offset-1 row justify-content-center">
+			<span id="anim_im_4" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg2 animated" style="display:non"><img src="img/second_1_1.jpg" alt=""><br>Удлинение и придание<br>густоты ресницам</span>
+			<span id="anim_im_5" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated" style="display:non"><img src="img/second_1_2.jpg" alt=""><br>Подбор формы ресниц<br>под разрез глаз</span>
+			<span id="anim_im_6" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated" style="display:non"><img src="img/second_1_3.jpg" alt=""><br>Удаление ранее<br>наращённых ресниц</span>
+			<span id="anim_im_7" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0  whyimg2 animated align-self-end" style="display:non"><img src="img/second_1_4.jpg" alt=""><br>Поресничное наращивание</span>
 		</div>
-	</section>-->
+		<p id="txt_1" class="col-md-8 offset-md-2" style="display:none">
+			При обращении к мастеру не стесняйтесь задавать побольше вопросов, особенно если Вы в первый раз решили наростить себе реснички.
+			<br>
+			Так же старайтесь чётко проговаривать желаемый результат от процедуры, ведь лэшмейкер не умеет читать мысли своих клиентов, но очень этого хотела бы =)
+		</p>
+	</section>
+	<footer class="col-12">
+		<div class="row">
+			<div id="giswidth" class="col-lg-6 col-md-6 col-sm-12">
+				<a class="dg-widget-link" href="http://2gis.ru/chita/firm/9007727535765234/center/113.508568,52.02853/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Читы</a><div class="dg-widget-link"><a href="http://2gis.ru/chita/center/113.508568,52.02853/zoom/17/routeTab/rsType/bus/to/113.508568,52.02853╎Экран, торговый центр?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Экран, торговый центр</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":window.outerWidth/2-40,"height":600,"borderColor":"#a3a3a3","pos":{"lat":52.02853,"lon":113.508568,"zoom":17},"opt":{"city":"chita"},"org":[{"id":"9007727535765234"}]});</script><noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в настройках вашего браузера.</noscript>
+			</div>
+			<div id="mail" class="col-lg-6 col-md-6 col-sm-12">
+				<h2>Запись на прием</h2>
+				<form action="">
+					<input class="col-12" type="phone" name="phone" placeholder="+7 914 444 44 44">
+					<input class="col-12" type="text" name="client" placeholder="Ваше имя">
+					<button class="col-lg-6 col-md-6 col-sm-12" type="button">Перезвоните мне</button>
+				</form>
+			</div>
+		</div>
+		<p class="col-12">Все права защищены © 2017 Татьяна Попова +7 (914) 471-00-18</p>
+	</footer>
 
 
 
