Добавлен скрипт отправки писем с просьбой перезвонить.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name = "viewport" content = "width=device-width, initial-scale = 1">
 	<meta name="Author" content="WEBDeveloperZBK">
 	<meta name="Description" content= "Личный сайт лэшмейкера Татьяны Поповой. Мастер по наращиванию ресничек в Чите">
-	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, наростить реснички на дому, как наростить реснички, материал для наращивания ресничек">
+	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, нарастить реснички на дому, как нарастить реснички, материал для наращивания ресничек">
 	<meta name="revisit" content="30">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/styles.css">
