Poject in prodaction

--- a/index.html
+++ b/index.html
@@ -9,36 +9,13 @@
 	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, нарастить реснички на дому, как нарастить реснички, материал для наращивания ресничек">
 	<meta name="revisit" content="30">
 	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/tether.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
-	<script>
-		var map;
-
-	    DG.then(function () {
-	        map = DG.map('map', {
-	            center: [52.02853, 113.508568],
-	            zoom: 17
-	        });
-
-	        DG.marker([52.02853, 113.508568]).addTo(map).bindPopup('Тут!');
-
-	        /*map.locate({setView: true, watch: true})
-                    .on('locationfound', function(e) {
-                        DG.marker([e.latitude, e.longitude]).addTo(map);
-                    })
-                    .on('locationerror', function(e) {
-                        DG.popup()
-                          .setLatLng(map.getCenter())
-                          .setContent('Доступ к определению местоположения отключён')
-                          .openOn(map);
-                    });*/
-	    });
+	<script type="text/javascript"> //<![CDATA[ 
+		var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+		document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+		//]]>
 	</script>
 </head>
 <body>
@@ -58,9 +35,9 @@
 			Только высококачественные материалы
 		</h2>
 		<div class="col-10 offset-1 row justify-content-center">
-			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated" style="visibility:hidden"><img src="img/first_1_1.jpg" alt=""></span>
-			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="visibility:hidden"><img src="img/first_1_2.jpg" alt=""></span>
-			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated" style="visibility:hidden"><img src="img/first_1_3.jpg" alt=""></span>
+			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated"><img src="img/first_1_1.jpg" alt=""></span>
+			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_2.jpg" alt=""></span>
+			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_3.jpg" alt=""></span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2">
 			Наращивание ресничек - это не только красиво и привлекательно, но еще и огромный риск для девушки проснуться после процедуры с признаками аллергии на дешевые материалы.
@@ -79,10 +56,10 @@
 			Краткий список услуг
 		</h2>
 		<div class="col-10 offset-1 row justify-content-center">
-			<span id="anim_im_4" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg2 animated" style="visibility:hidden"><img src="img/second_1_1.jpg" alt=""><br>Удлинение и придание<br>густоты ресницам</span>
-			<span id="anim_im_5" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated" style="visibility:hidden"><img src="img/second_1_2.jpg" alt=""><br>Подбор формы ресниц<br>под разрез глаз</span>
-			<span id="anim_im_6" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated" style="visibility:hidden"><img src="img/second_1_3.jpg" alt=""><br>Удаление ранее<br>наращённых ресниц</span>
-			<span id="anim_im_7" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0  whyimg2 animated align-self-end" style="visibility:hidden"><img src="img/second_1_4.jpg" alt=""><br>Поресничное наращивание</span>
+			<span id="anim_im_4" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg2 animated"><img src="img/second_1_1.jpg" alt=""><br>Удлинение и придание<br>густоты ресницам</span>
+			<span id="anim_im_5" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_2.jpg" alt=""><br>Подбор формы ресниц<br>под разрез глаз</span>
+			<span id="anim_im_6" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_3.jpg" alt=""><br>Удаление ранее<br>наращённых ресниц</span>
+			<span id="anim_im_7" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0  whyimg2 animated align-self-end"><img src="img/second_1_4.jpg" alt=""><br>Поресничное наращивание</span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2">
 			При обращении к мастеру не стесняйтесь задавать побольше вопросов, особенно если Вы в первый раз решили наростить себе реснички.
@@ -104,11 +81,19 @@
 				<div id="map"></div>
 			</div>
 		</div>
-		<p class="col-12" style="margin-top:1em">Все права защищены © 2017 Татьяна Попова +7 (914) 471-00-18</p>
-	</footer>
-
-
+		<p class="col-12" style="margin-top:1em">Все права защищены © 2017 Татьяна Попова +7 (914) 471-00-18 <br><script language="JavaScript" type="text/javascript">
+TrustLogo("https://iulesh.ru/img/comodo_secure_seal_113x59_transp.png", "CL1", "none");
+</script>
+<a  href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a></p>
+	</footer>	
+	
+	<link rel="stylesheet" href="css/animate.css">		
+	
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/tether.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
 </body>
 </html>
