--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@ TrustLogo("https://iulesh.ru/img/comodo_secure_seal_113x59_transp.png", "CL1", "
 	<link rel="stylesheet" href="css/animate.css">		
 	
 	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/jQuery.scrollSpeed.js"></script>
 	<script src="js/tether.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
+	<script>
+	    
+    </script>
 </body>
 </html>
