--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Лэшмейкер Татьяна | Наращиваниее ресничек Чита</title>
+	<title>Лэшмейкер Татьяна Попова | Наращиваниее ресничек Чита</title>
 	<meta name = "viewport" content = "width=device-width, initial-scale = 1">
 	<meta name="Author" content="WEBDeveloperZBK">
-	<meta name="Description" content= "Личный сайт лэшмейкера Татьяны Поповой. Мастер по наращиванию ресничек в Чите">
-	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, нарастить реснички на дому, как нарастить реснички, материал для наращивания ресничек">
+	<meta name="Description" content= "Личный сайт лэшмейкера Татьяны Поповой. Мастер по наращиванию ресничек в Чите. ТЦ Экран по ул. 9-е Января 37">
+	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, нарастить реснички на дому, как нарастить реснички, материал для наращивания ресничек, пышные ресницы, наращенные ресницы">
 	<meta name="revisit" content="30">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/styles.min.css">
@@ -20,12 +20,12 @@
 </head>
 <body>
 	<header id="header" class="conteiner-fluid">
-		<div id="contaner_zagolovok" class="row">
-			<h2 id="nadzagolovok" class="col-md-4 offset-md-8 align-self-end animated bounceIn"><i class="fa fa-mobile" aria-hidden="true"></i> +7 (914) 471-00-18</h2>
+		<div id="contaner_zagolovok" class="row" itemscope itemtype="http://schema.org/Person">
+			<h2 id="nadzagolovok" class="col-md-4 offset-md-8 align-self-end animated bounceIn" itemprop="telephone"><i class="fa fa-mobile" aria-hidden="true"></i> +7 (914) 471-00-18</h2>
 			<h1 id="zagolovok" class="col-md-4 offset-md-8 align-self-center animated">
-				Leshmaker<br>Татьяна Попова<br>				
+				<span itemprop="jobTitle">Leshmaker</span><br><span itemprop="givenName">Татьяна Попова</span><br>				
 			</h1>
-			<h2 id="podzagolovok" class="col-md-4 offset-md-8 align-self-start animated bounceInRight">
+			<h2 id="podzagolovok" class="col-md-4 offset-md-8 align-self-start animated bounceInRight" itemprop="knows">
 				Наращивание ресничек | Индивидуальный дизайн
 			</h2>
 		</div>
@@ -35,9 +35,9 @@
 			Только высококачественные материалы
 		</h2>
 		<div class="col-10 offset-1 row justify-content-center">
-			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated"><img src="img/first_1_1.jpg" alt=""></span>
-			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_2.jpg" alt=""></span>
-			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_3.jpg" alt=""></span>
+			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated"><img src="img/first_1_1.jpg" alt="Материалы для наращивания ресниц"></span>
+			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_2.jpg" alt="Материалы для наращивания ресниц"></span>
+			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_3.jpg" alt="Материалы для наращивания ресниц"></span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2">
 			Наращивание ресничек - это не только красиво и привлекательно, но еще и огромный риск для девушки проснуться после процедуры с признаками аллергии на дешевые материалы.
@@ -56,13 +56,13 @@
 			Краткий список услуг
 		</h2>
 		<div class="col-10 offset-1 row justify-content-center">
-			<span id="anim_im_4" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg2 animated"><img src="img/second_1_1.jpg" alt=""><br>Удлинение и придание<br>густоты ресницам</span>
-			<span id="anim_im_5" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_2.jpg" alt=""><br>Подбор формы ресниц<br>под разрез глаз</span>
-			<span id="anim_im_6" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_3.jpg" alt=""><br>Удаление ранее<br>наращённых ресниц</span>
-			<span id="anim_im_7" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0  whyimg2 animated align-self-end"><img src="img/second_1_4.jpg" alt=""><br>Поресничное наращивание</span>
+			<span id="anim_im_4" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg2 animated"><img src="img/second_1_1.jpg" alt="Удлиннение ресниц и придание густоты"><br>Удлинение и придание<br>густоты ресницам</span>
+			<span id="anim_im_5" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_2.jpg" alt="Подбор формы ресниц под овал лица и разрез глаз"><br>Подбор формы ресниц<br>под разрез глаз</span>
+			<span id="anim_im_6" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg2 animated"><img src="img/second_1_3.jpg" alt="Удаление наращеных ресниц"><br>Удаление ранее<br>наращённых ресниц</span>
+			<span id="anim_im_7" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0  whyimg2 animated align-self-end"><img src="img/second_1_4.jpg" alt="Поресничное наращивание"><br>Поресничное наращивание</span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2">
-			При обращении к мастеру не стесняйтесь задавать побольше вопросов, особенно если Вы в первый раз решили наростить себе реснички.
+			При обращении к мастеру не стесняйтесь задавать побольше вопросов, особенно если Вы в первый раз решили нарастить себе реснички.
 			<br>
 			Так же старайтесь чётко проговаривать желаемый результат от процедуры, ведь лэшмейкер не умеет читать мысли своих клиентов, но очень этого хотела бы =)
 		</p>
