Add yandex metrika

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="Description" content= "Личный сайт лэшмейкера Татьяны Поповой. Мастер по наращиванию ресничек в Чите. ТЦ Экран по ул. 9-е Января 37">
 	<meta name="keywords" content="Наращивание ресничек в Чите, лэшмейкер в Чите, нарастить реснички на дому, как нарастить реснички, материал для наращивания ресничек, пышные ресницы, наращенные ресницы">
 	<meta name="revisit" content="30">
+	<meta property="og:image" content="img/for_soc.jpg" />
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/styles.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -81,10 +82,44 @@
 				<div id="map"></div>
 			</div>
 		</div>
-		<p class="col-12" style="margin-top:1em">Все права защищены © 2017 Татьяна Попова +7 (914) 471-00-18 <br><script language="JavaScript" type="text/javascript">
-TrustLogo("https://iulesh.ru/img/comodo_secure_seal_113x59_transp.png", "CL1", "none");
-</script>
-<a  href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a></p>
+		<p class="col-12" style="margin-top:1em">Все права защищены © 2017 Татьяна Попова +7 (914) 471-00-18 <br>
+			<script language="JavaScript" type="text/javascript">
+				TrustLogo("https://iulesh.ru/img/comodo_secure_seal_113x59_transp.png", "CL1", "none");
+			</script>
+			<a  href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a>
+			<span class="col-1">
+				<!-- Yandex.Metrika counter -->
+				<script type="text/javascript" >
+				    (function (d, w, c) {
+				        (w[c] = w[c] || []).push(function() {
+				            try {
+				                w.yaCounter46546458 = new Ya.Metrika({
+				                    id:46546458,
+				                    clickmap:true,
+				                    trackLinks:true,
+				                    accurateTrackBounce:true,
+				                    webvisor:true,
+				                    trackHash:true
+				                });
+				            } catch(e) { }
+				        });
+
+				        var n = d.getElementsByTagName("script")[0],
+				            s = d.createElement("script"),
+				            f = function () { n.parentNode.insertBefore(s, n); };
+				        s.type = "text/javascript";
+				        s.async = true;
+				        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+				        if (w.opera == "[object Opera]") {
+				            d.addEventListener("DOMContentLoaded", f, false);
+				        } else { f(); }
+				    })(document, window, "yandex_metrika_callbacks");
+				</script>
+				<noscript><div><img src="https://mc.yandex.ru/watch/46546458" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+				<!-- /Yandex.Metrika counter -->
+			</span>
+		</p>
 	</footer>	
 	
 	<link rel="stylesheet" href="css/animate.css">		
