--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			Только высококачественные материалы
 		</h2>
 		<div class="col-10 offset-1 row justify-content-center">
-			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated"><img src="img/first_1_1.jpg" alt="Материалы для наращивания ресниц"></span>
-			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_2.jpg" alt="Материалы для наращивания ресниц"></span>
-			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_3.jpg" alt="Материалы для наращивания ресниц"></span>
+			<span id="anim_im_1" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 whyimg animated"><img src="img/first_1_1.jpg" alt="Материалы для наращивания ресниц"><br>Исключительно<br>качественные материалы</span>
+			<span id="anim_im_2" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_2.jpg" alt="Материалы для наращивания ресниц"><br>Брэнды<br>завоевавшие доверие</span>
+			<span id="anim_im_3" class="col-md-3 col-lg-3 col-sm-7 offset-sm-0 offset-lg-1 offset-md-1 whyimg animated"><img src="img/first_1_3.jpg" alt="Материалы для наращивания ресниц"><br>Гипоаллергенные<br> и безвредные</span>
 		</div>
 		<p id="txt_1" class="col-md-8 offset-md-2">
 			Наращивание ресничек - это не только красиво и привлекательно, но еще и огромный риск для девушки проснуться после процедуры с признаками аллергии на дешевые материалы.
@@ -87,7 +87,8 @@
 				TrustLogo("https://iulesh.ru/img/comodo_secure_seal_113x59_transp.png", "CL1", "none");
 			</script>
 			<a  href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a>
-			<span class="col-1">
+		</p>
+		<span id="metr" class="">
 				<!-- Yandex.Metrika counter -->
 				<script type="text/javascript" >
 				    (function (d, w, c) {
@@ -119,7 +120,6 @@
 				<noscript><div><img src="https://mc.yandex.ru/watch/46546458" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 				<!-- /Yandex.Metrika counter -->
 			</span>
-		</p>
 	</footer>	
 	
 	<link rel="stylesheet" href="css/animate.css">		
